fix: fixing code to more sturdiness